--- a/packages.html
+++ b/packages.html
@@ -80,9 +80,13 @@
 
 
     <div class="bg-dark p-4 pt-lg-5 pt-md-5" id="open-p">
-      <h1 class="pt-5 p-2 bi-airplane" style="color: #1bbd36;">
+      <h1 class="pt-5 m-5 p-2" style="color: aliceblue;">
+        <span>
+          <i class="bi-airplane" style="color: #1bbd36;">
+          </i>
+        </span>
         Travel Packages
-      </h1>
+      </h1> 
 
       <div style="font-size: 20px;font-family:Arial, Helvetica, sans-serif;text-align: justify;" id="desc">
         <p class="pt-2 pb-3 p-3 text-light" data-aos="fade-right">
