--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
       <div class="container">
         
         <div class="row justify-content-center pt-5" data-aos="fade-up">
-          <h1 style="text-align: center; color: #1bbd36;">
+          <h1 style="text-align: center; color: #ffffff;">
             Contact Us
           </h1>
           
