--- a/login.html
+++ b/login.html
@@ -64,46 +64,36 @@
 
 	<div class="limiter">
 		<div class="container-login100">
-			<div class="wrap-login100" data-aos="fade-up">
-				<form class="login100-form validate-form p-l-55 p-r-55 p-t-170">
-					<span class="login100-form-title">
+			<div class="wrap-login100 p-5" data-aos="fade-up">
+				<form class="login100-form">
+					<span class="login100-form-title pb-5">
 						Sign In
 					</span>
 
-					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
+					<div class="wrap-input100 mb-4" data-validate="Please enter username">
 						<input class="input100" type="text" name="username" placeholder="Username" required>
 						<span class="focus-input100"></span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate="Please enter password">
+					<div class="wrap-input100 mb-4" data-validate="Please enter password">
 						<input class="input100" type="password" name="pass" placeholder="Password" required>
 						<span class="focus-input100"></span>
 					</div>
 
-					<div class="text-right p-t-13 p-b-23">
-						<span class="txt1">
-							Forgot
-						</span>
-
-						<a href="#" class="txt2">
-							Username / Password?
-						</a>
-					</div>
-
-					<div class="container-login100-form-btn">
+					<div class="container-login100-form-btn mb-3">
 						<button class="login100-form-btn">
 							Sign in
 						</button>
 					</div>
-
-					<div class="flex-col-c p-t-70 p-b-40">
-						<span class="txt1 p-b-9">
-							Don’t have an account?
-						</span>
-
-						<a href="signup.html" class="txt3">
-							Sign up now
-						</a>
+					<div class="row pt-3 justify-content-center">
+						<div class="col-md-9">
+							<span class="txt1">
+								Don’t have an account?
+							</span>
+							<a href="signup.html" class="txt3">
+								Sign up now
+							</a>
+						</div>
 					</div>
 				</form>
 			</div>
