--- a/signup.html
+++ b/signup.html
@@ -62,32 +62,29 @@
 		</div>
 	</header>
 
-
 	<div class="limiter">
-		<div class="container-login100" data-aos="fade-up">
-			<div class="wrap-login100">
-				<form class="login100-form validate-form p-l-55 p-r-55 p-t-170">
-					<span class="login100-form-title">
+		<div class="container-login100">
+			<div class="wrap-login100 p-5" data-aos="fade-up">
+				<form class="login100-form">
+					<span class="login100-form-title pb-5">
 						Become a Member
 					</span>
 
-					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter Email">
+					<div class="wrap-input100  mb-4" data-validate="Please enter Email">
 						<input class="input100" type="email" name="email" placeholder="Email" required>
 						<span class="focus-input100"></span>
 					</div>
 
-					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
+					<div class="wrap-input100  mb-4" data-validate="Please enter username">
 						<input class="input100" type="text" name="username" placeholder="Username" required>
 						<span class="focus-input100"></span>
 					</div>
 
 
-					<div class="wrap-input100 validate-input" data-validate="Please enter password">
+					<div class="wrap-input100 mb-4" data-validate="Please enter password">
 						<input class="input100" type="password" name="pass" placeholder="Password" required>
 						<span class="focus-input100"></span>
 					</div>
-
-					<br>
 
 					<div class="form-check" data-validate="Check To Continue">
 						<input class="form-check-input" type="checkbox" value="" id="flexCheck" required>
@@ -98,22 +95,20 @@
 						</label>
 					</div>
 
-					<br>
-
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
 							Sign Up
 						</button>
 					</div>
-
-					<div class="flex-col-c p-t-70 p-b-40">
-						<span class="txt1 p-b-9">
-							Already have an account?
-						</span>
-
-						<a href="login.html" class="txt3">
-							Sign In now
-						</a>
+					<div class="row pt-3 justify-content-center">
+						<div class="col-md-9">
+							<span class="txt1">
+								Already have an account?
+							</span>
+							<a href="login.html" class="txt3">
+								Login now
+							</a>
+						</div>
 					</div>
 				</form>
 			</div>
