--- a/booking.html
+++ b/booking.html
@@ -145,20 +145,20 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row pt-3">
-                                        <div class="col-5">
+                                    <div class="row pt-3 adultSlider">
+                                        <div class="col-lg-5 adultSlider">
                                             <span class="form-label">Adults</span>
-                                            <div class="w-100 col-lg-7">
+                                            <div class="w-100 col-lg-5">
                                                 <input type="range" id="adultSlider" step="1" class="w-100 mt-3"
                                                     value="1" min="1" max="10">
                                             </div>
                                         </div>
 
-                                        <div class="col-1 mt-2">
+                                        <div class="col-lg-1 col-sm-1 mt-2">
                                             <input type="number" id="adultInput" class="form-control mt-3" min="1"
                                                 max="10" value="1" required>
                                         </div>
-                                        <div class="col-5">
+                                        <div class="col-lg-5 childSlider">
                                             <span class="form-label">Childrens <span>(Age: 1-17)</span></span>
                                             <div class="w-100 col-lg-7">
                                                 <input type="range" id="childSlider" step="1" class="w-100 mt-3"
@@ -166,7 +166,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-1 mt-2">
+                                        <div class="col-lg-1 mt-2">
                                             <input type="number" id="childInput" class="form-control mt-3" min="1"
                                                 max="10" value="1" required>
                                         </div>
