--- a/booking.html
+++ b/booking.html
@@ -78,7 +78,7 @@
             </div>
         </section>
 
-        <section style="background-image: url('/media/background.jpg');background-size: cover;
+        <section style="background-image: url('media/background.jpg');background-size: cover;
         background-position: center;">
             <div id="booking" class="section" data-aos="fade-up">
                 <div class="section-center">
