--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
           </video>
 
           <div id="logo" style="position: absolute; margin-top: 2%; margin-left: 30%;">
-            <img src="/media/Onways.png" alt="logo" width="40%">
+            <img src="media/Onways.png" alt="logo" width="40%">
           </div>
 
           <div id="tagline"
