--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="/media/favicon.png" />
 
 	<link rel="stylesheet" href="/assets/css/util.css">
-	<link rel="stylesheet" href="/assets/css/form.css">
+	<link rel="stylesheet" href="/ON Ways Travels/assets/css/form.css">
 	<link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
 	<link href="assets/vendor/aos/aos.css" rel="stylesheet">
 	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
