--- a/packages.html
+++ b/packages.html
@@ -112,7 +112,7 @@
           <!-- Card 1 -->
           <div class="col pb-5">
             <div class="services card">
-              <img src="/media/packages/dubai.jpg" class="card-img-top" alt="...">
+              <img src="media/packages/dubai.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Dubai City Tour</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -126,7 +126,7 @@
           <!-- Card 2 -->
           <div class="col">
             <div class="services card">
-              <img src="/media/packages/qatar.jpg" class="card-img-top" alt="...">
+              <img src="media/packages/qatar.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Qatar Tour</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -140,7 +140,7 @@
           <!-- Card 3 -->
           <div class="col">
             <div class="services card">
-              <img src="/media/packages/turkey.jpg" class="card-img-top" alt="...">
+              <img src="media/packages/turkey.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Turkey Tour</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -154,7 +154,7 @@
           <!-- Card 4 -->
           <div class="col">
             <div class="services card">
-              <img src="/media/packages/world tour.jpg" class="card-img-top" alt="...">
+              <img src="media/packages/world tour.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">World Tour</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
