--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
       </div>
     </section>
 
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" style="background-image: url('media/contact.jpg');">
       <div class="container">
 
         <div class="row justify-content-center pt-5" data-aos="fade-up">
