--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
 	</header>
 
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('/planebg.jpg');">
+		<div class="container-login100" style="background-image: url('media/planebg.jpg');">
 			<div class="wrap-login100 p-5" data-aos="fade-up">
 				<form class="login100-form" method="POST" action="/ONWaysTravels/login.php">
 					<span class="login100-form-title pb-5">
