--- a/signup.html
+++ b/signup.html
@@ -62,8 +62,8 @@
 	</header>
 
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('/planebg.jpg');">
-			<div class="wrap-login100 p-5" data-aos="fade-up">
+		<div class="container-login100" style="background-image: url('media/planebg.jpg');">
+			<div class="wrap-login100 p-5 mt-md-5" data-aos="fade-up">
 				<form class="login100-form" method="post" action="/ONWaysTravels/signup.php">
 					<span class="login100-form-title pb-5">
 						Become a Member
